--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -70,6 +70,7 @@
 
         // TODO 2 - Variable declarations
 
+var positionX=0
 
 
 
@@ -81,7 +82,9 @@
          */
         function update() {
 
-        
+
+        positionX = positionX + 10
+        moveBoxTo(newPositionX);
 
           
         }
@@ -94,6 +97,9 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
+
+          positionX = 0
+          changeBoxText(0);
 
 
 
