--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -70,8 +70,8 @@
 
         // TODO 2 - Variable declarations
 
-var positionX=0
-
+var positionX=0;
+var points=0;
 
 
 
@@ -99,7 +99,8 @@ var positionX=0
         function handleBoxClick() {
 
           positionX = 0
-          changeBoxText(0);
+          changeBoxText(points);
+          points = points + 1
 
 
 
