--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -72,7 +72,7 @@
 
 var positionX=0;
 var points=0;
-
+var speed=10;
 
 
         /**
@@ -83,7 +83,7 @@ var points=0;
         function update() {
 
 
-        positionX = positionX + 10
+        positionX = positionX + speed
         moveBoxTo(newPositionX);
 
           
@@ -101,6 +101,7 @@ var points=0;
           positionX = 0
           changeBoxText(points);
           points = points + 1
+          speed = speed + 3
 
 
 
