--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -86,8 +86,11 @@ var speed=10;
         
         
         positionX = positionX + speed
-        moveBoxTo(PositionX);
+        moveBoxTo(positionX);
         if (positionX > boardWidth) {
+          speed = speed * -1
+        }
+        if (positionX < 0) {
           speed = speed * -1
         }
 
@@ -106,7 +109,7 @@ var speed=10;
           positionX = 0
           changeBoxText(points);
           points = points + 1
-          speed = speed + 3
+        speed = 3 * points + 10
 
 
 
